Chore: 눈나커피로 수정

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </nav>
 
     <main class="main">
-      <!-- 하이오 커피 비디오-->
+      <!-- 눈나 커피 비디오-->
       <div class="main-top-video-section">
         <video width="560" height="315" autoplay loop muted>
           <source src="./src/hiocoffee-video.mp4" type="video/mp4" />
@@ -105,11 +105,11 @@
         >
           <div>프로페셔널한 커피</div>
           <div>감동적인 맛,</div>
-          <div class="main-top-video-lastline">하이오커피</div>
+          <div class="main-top-video-lastline">눈나커피</div>
         </div>
       </div>
 
-      <!--하이오 커피 소개 캐러셀-->
+      <!--눈나 커피 소개 캐러셀-->
       <div>
         <div
           id="carouselExampleIndicators"
@@ -183,26 +183,26 @@
         </div>
       </div>
 
-      <!--하이오커피 가치 문구-->
+      <!--눈나커피 가치 문구-->
       <section
         class="container main-top-section inner"
         data-aos="fade-up"
         data-aos-duration="2500"
       >
         <div>
-          <div class="main-top-title"><span>HIO COFFEE</span>'S VALUATION</div>
+          <div class="main-top-title"><span>NUNNA COFFEE</span>'S VALUATION</div>
           <p class="main-top-txt">
-            “하이오와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”
+            “눈나와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”
           </p>
           <span class="main-top-subtxt">
             A Reasonable price, A High-quality coffee, Anyone, At any Time With
-            HIO
+            NUNNA
           </span>
         </div>
         <ul>
           <li>
             <img src="./src/maintop-coffeebean.png" />
-            <h6>하이오커피의 원두</h6>
+            <h6>눈나커피의 원두</h6>
             <p>
               각 나라별 산지에서 엄선된 생두를 사용함과 동시에 생두의 생산에
               직접적인 영향을 주는 바람, 태양, 비, 기후, 토양, 고도, 온도, 경작
@@ -212,9 +212,9 @@
           </li>
           <li>
             <img src="./src/maintop-cup.png" />
-            <h6>하이오커피의 컵</h6>
+            <h6>눈나커피의 컵</h6>
             <p>
-              하이오커피는 친환경 리유저블 컵을 사용합니다. 테이크아웃과
+              눈나커피는 친환경 리유저블 컵을 사용합니다. 테이크아웃과
               딜리버리에 적합한 아이템, 강한 내열성과 냉·보온을 유지할 수 있는
               높은 지속성, 그리고 감각적인 컵 디자인과 하트 마개를 이용한
               편의성을 추구합니다.
@@ -238,10 +238,10 @@
           data-aos-duration="2500"
         >
           <div class="main-bottom-drink-title">
-            <span>HIO COFFEE</span>'S VALUATION
+            <span>NUNNA COFFEE</span>'S VALUATION
           </div>
           <p class="main-bottom-drink-txt">
-            “하이오와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”
+            “눈나와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”
           </p>
         </div>
         <div id="main-bottom-drinks-wrapper"></div>
@@ -253,10 +253,10 @@
           data-aos-duration="2500"
         >
           <div class="main-bottom-drink-title">
-            <span>HIO COFFEE</span>'S VALUATION
+            <span>NUNNA COFFEE</span>'S VALUATION
           </div>
           <p class="main-bottom-drink-txt">
-            “하이오와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”
+            “눈나와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”
           </p>
         </div>
         <div id="main-bottom-map-wrapper">
@@ -322,10 +322,10 @@
           data-aos-duration="2500"
         >
           <div class="main-bottom-drink-title">
-            <span>HIO COFFEE</span>'S VALUATION
+            <span>NUNNA COFFEE</span>'S VALUATION
           </div>
           <p class="main-bottom-drink-txt">
-            “하이오와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”
+            “눈나와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”
           </p>
         </div>
         <div id="main-bottom-mobile-map-indicators" class="carousel slide">
@@ -454,15 +454,15 @@
           />
           <div class="footer-secondline-location">
             <p style="margin-bottom: 5px">
-              하이오커피 서울센터 | 서울특별시 금천구 가산디지털2로 101
+              눈나커피 서울센터 | 서울특별시 금천구 가산디지털2로 101
               코알누타워 A동
             </p>
             <p style="margin-bottom: 5px">
-              하이오커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동
+              눈나커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동
               301호
             </p>
             <p>
-              하이오커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림
+              눈나커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림
               101호
             </p>
           </div>
