Feat: index.html navbar 링크 연결 구현

--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
           <img src="./src/logo-white.png" style="height: 55px; margin: 5px 0" />
         </div>
         <div class="nav-menu">
-          <h3 class="nav-menu-text">ABOUT</h3>
-          <h3 class="nav-menu-text">MENU</h3>
-          <h3 class="nav-menu-text">COMMUNITY</h3>
+          <a href="about.html" class="nav-menu-link">
+            <h3 class="nav-menu-text">ABOUT</h3>
+          </a>
+          <a href="menu.html" class="nav-menu-link">
+            <h3 class="nav-menu-text">MENU</h3>
+          </a>
+          <a href="community.html" class="nav-menu-link">
+            <h3 class="nav-menu-text">COMMUNITY</h3>
+          </a>
         </div>
         <div class="nav-sns">
           <div class="nav-ico-box">
@@ -81,9 +87,15 @@
             </div>
             <div class="offcanvas-body">
               <div class="nav-offcanvas-container">
-                <p class="nav-offcanvas-menu">ABOUT</p>
-                <p class="nav-offcanvas-menu">MENU</p>
-                <p class="nav-offcanvas-menu">COMMUNITY</p>
+                <a href="about.html" class="nav-menu-link">
+                  <p class="nav-offcanvas-menu">ABOUT</p>
+                </a>
+                <a href="menu.html" class="nav-menu-link">
+                  <p class="nav-offcanvas-menu">MENU</p>
+                </a>
+                <a href="community.html" class="nav-menu-link">
+                  <p class="nav-offcanvas-menu">COMMUNITY</p>
+                </a>
               </div>
             </div>
           </div>
