Feat: 메인 로고 클릭시 홈으로 이동

--- a/community.html
+++ b/community.html
@@ -15,21 +15,25 @@
         <nav class="nav">
         <div class="nav-style">
             <div class="nav-logo">
-                <img src="./src/logo-black-withCoffee.png" style="height: 65px;">
+                <a href="/">
+                    <img src="./src/logo-black-withCoffee.png" style="height: 65px" />
+                </a>
             </div>
             <div class="nav-logo-mediaQuery">
-                <img src="./src/logo-white.png" style="height: 55px; margin: 5px 0;">
+                <a href="/">
+                    <img src="./src/logo-white.png" style="height: 55px; margin: 5px 0;">
+                </a>
             </div>
             <div class="nav-menu">
-              <a href="about.html" class="nav-menu-link">
-                <h3 class="nav-menu-text">ABOUT</h3>
-              </a>
-              <a href="menu.html" class="nav-menu-link">
-                <h3 class="nav-menu-text">MENU</h3>
-              </a>
-              <a href="community.html" class="nav-menu-link">
-                <h3 class="nav-menu-text">COMMUNITY</h3>
-              </a>  
+                <a href="about.html" class="nav-menu-link">
+                    <h3 class="nav-menu-text">ABOUT</h3>
+                </a>
+                <a href="menu.html" class="nav-menu-link">
+                    <h3 class="nav-menu-text">MENU</h3>
+                </a>
+                <a href="community.html" class="nav-menu-link">
+                    <h3 class="nav-menu-text">COMMUNITY</h3>
+                </a>  
             </div>
             <div class="nav-sns">
                 <div class="nav-ico-box">
@@ -53,18 +57,18 @@
                     </div>
                     <div class="offcanvas-body">
                         <div class="nav-offcanvas-container">
-                          <a href="about.html" class="nav-menu-link">
-                            <p class="nav-offcanvas-menu">ABOUT</p>
-                          </a>
-                          <a href="menu.html" class="nav-menu-link">
-                            <p class="nav-offcanvas-menu">MENU</p>
-                          </a>
-                          <a href="community.html" class="nav-menu-link">
-                            <p class="nav-offcanvas-menu">COMMUNITY</p>
-                          </a>          
+                            <a href="about.html" class="nav-menu-link">
+                                <p class="nav-offcanvas-menu">ABOUT</p>
+                            </a>
+                            <a href="menu.html" class="nav-menu-link">
+                                <p class="nav-offcanvas-menu">MENU</p>
+                            </a>
+                            <a href="community.html" class="nav-menu-link">
+                                <p class="nav-offcanvas-menu">COMMUNITY</p>
+                            </a>          
+                            </div>
                         </div>
                     </div>
-                  </div>
             </div>
         </div>
         </nav>
