--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
     <nav class="nav">
       <div class="nav-style">
         <div class="nav-logo">
+          <a href="/">
           <img src="./src/logo-black-withCoffee.png" style="height: 65px" />
+          </a>
         </div>
         <div class="nav-logo-mediaQuery">
-          <img src="./src/logo-white.png" style="height: 55px; margin: 5px 0" />
+          <a href="/">
+            <img src="./src/logo-white.png" style="height: 55px; margin: 5px 0;">
+          </a>
         </div>
         <div class="nav-menu">
           <a href="about.html" class="nav-menu-link">
