main 수정사항적용

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/main-top.js"></script>
+    <script src="/js/main_top.js"></script>
     <script>
       AOS.init();
     </script>
