가로 스크린 해결, 폰트 적용

--- a/menu-bottom.html
+++ b/menu-bottom.html
@@ -99,7 +99,7 @@
       </div>
     </nav>
 
-    <menu-bottom>
+    <menu-bottom class="menu-bottom">
       <!--메뉴 카드 구성-->
       <menu-card>
         <div class="container mt-4">
@@ -491,15 +491,15 @@
           />
           <div class="footer-secondline-location">
             <p style="margin-bottom: 5px">
-              하이오커피 서울센터 | 서울특별시 금천구 가산디지털2로 101
-              코알누타워 A동
+              눈나커피 서울센터 | 서울특별시 금천구 가산디지털2로 101 코알누타워
+              A동
             </p>
             <p style="margin-bottom: 5px">
-              하이오커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동
+              눈나커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동
               301호
             </p>
             <p>
-              하이오커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림
+              눈나커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림
               101호
             </p>
           </div>
@@ -537,6 +537,7 @@
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
+
     <script type="text/javascript">
       $(document).ready(function () {
         $(".autoplay").slick({
@@ -570,7 +571,7 @@
             {
               breakpoint: 480,
               settings: {
-                slidesToShow: 1,
+                slidesToShow: 2,
                 slidesToScroll: 1,
                 dots: false, // 동그라미 제거
               },
