--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
         data-aos-duration="2500"
       >
         <div>
-          <div class="main-top-title"><span>NUNNA COFFEE</span>'S VALUATION</div>
+          <div class="main-top-title">
+            <span>NUNNA COFFEE</span>'S VALUATION
+          </div>
           <p class="main-top-txt">
             “눈나와 함께 합리적인 가격에, 고품질의 커피를, 누구나, 언제든지”
           </p>
@@ -257,6 +259,31 @@
           </p>
         </div>
         <div id="main-bottom-drinks-wrapper"></div>
+      </section>
+      <section id="main-bottom-follow-section">
+        <div class="main-bottom-follow-inner">
+          <div class="main-bottom-follow-title">
+            <h5>FOLLOW US</h5>
+            <a href="#">@NOONA.COFFEE</a>
+          </div>
+          <div class="main-bottom-follow-wrapper">
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/1.jpg"></a></div>
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/2.jpg"></a></div>
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/3.png"></a></div>
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/4.png"></a></div>
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/5.png"></a></div>
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/6.jpg"></a></div>
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/7.jpg"></a></div>
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/8.jpg"></a></div>
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/9.jpg"></a></div>
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/10.jpg"></a></div>
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/11.jpg"></a></div>
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/12.jpg"></a></div>
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/13.jpg"></a></div>
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/14.jpg"></a></div>
+            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/15.jpg"></a></div>
+          </div>
+        </div>
       </section>
       <section id="main-bottom-map-section">
         <div
@@ -469,8 +496,8 @@
           />
           <div class="footer-secondline-location">
             <p style="margin-bottom: 5px">
-              눈나커피 서울센터 | 서울특별시 금천구 가산디지털2로 101
-              코알누타워 A동
+              눈나커피 서울센터 | 서울특별시 금천구 가산디지털2로 101 코알누타워
+              A동
             </p>
             <p style="margin-bottom: 5px">
               눈나커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동
