--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <!-- 눈나 커피 비디오-->
       <div class="main-top-video-section">
         <video width="560" height="315" autoplay loop muted>
-          <source src="./src/hiocoffee-video.mp4" type="video/mp4" />
+          <source src="src/hiocoffee-video.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <div
