--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <div class="main-bottom-follow-inner">
           <div class="main-bottom-follow-title">
             <h5>FOLLOW US</h5>
-            <a href="#">@NOONA.COFFEE</a>
+            <a href="#">@NUNNA.COFFEE</a>
           </div>
           <div class="main-bottom-follow-wrapper">
             <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/1.jpg"></a></div>
