--- a/menu-top.html
+++ b/menu-top.html
@@ -25,16 +25,18 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js">   
-    </script>
-    <link href="menu-top.css" rel="stylesheet" type="text/css" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="menu-top.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="css/menu-bottom.css" />
   </head>
   <body>
     <div
       class="menutop-subvisual"
       style="
-        background-image: url(https://www.hiocoffee.com/sub/img/ll_menu.png);">
+        background-image: url(https://www.hiocoffee.com/sub/img/ll_menu.png);
+      "
+    >
       <div class="menutop-inner">
         <h2>MENU</h2>
         <p>GOOD TASTE, 눈나's COFFEE</p>
@@ -54,9 +56,10 @@
               Menu<i class="bi bi-chevron-down"></i>
             </div>
             <ul class="nav nav-underline">
-            
               <li class="menutop-nav-item">
-                <a class="menutop-nav-link active" aria-current="page" href="#">All</a>
+                <a class="menutop-nav-link active" aria-current="page" href="#"
+                  >All</a
+                >
               </li>
               <li class="menutop-nav-item">
                 <a class="menutop-nav-link" href="#">ESPRESSO</a>
@@ -77,12 +80,11 @@
                 <a class="menutop-nav-link" href="#">1.1L BOTTLE</a>
               </li>
               <li class="menutop-nav-item">
-                <a class="menutop-nav-link "  href="#">DESSERT</a>
+                <a class="menutop-nav-link" href="#">DESSERT</a>
               </li>
             </ul>
-            <div class="menutop-dropdown ">
+            <div class="menutop-dropdown">
               <ul class="dropdown-menu menutop-dropdown-menu">
-                
                 <li><a class="dropdown-item" href="#">All</a></li>
                 <li><a class="dropdown-item" href="#">ESPRESSO</a></li>
                 <li><a class="dropdown-item" href="#">BEVERAGE</a></li>
@@ -148,11 +150,15 @@
               $(document).ready(function () {
                 function initSlick() {
                   if (window.innerWidth <= 768) {
-                    if (!$(".menutop-single-item").hasClass("slick-initialized")) {
+                    if (
+                      !$(".menutop-single-item").hasClass("slick-initialized")
+                    ) {
                       $(".menutop-single-item").slick();
                     }
                   } else {
-                    if ($(".menutop-single-item").hasClass("slick-initialized")) {
+                    if (
+                      $(".menutop-single-item").hasClass("slick-initialized")
+                    ) {
                       $(".menutop-single-item").slick("unslick");
                     }
                   }
